// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches image fields > existing > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "transparent",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "id-existing",
        "url": "https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?w=2560&h=1440&fit=crop",
      },
    },
  ],
}
`;

exports[`patches image fields > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "id-existing",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "id-existing",
          "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "id-existing",
              "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "id-existing",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "id-existing",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > existing > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
    "id": "id-existing",
    "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
  },
}
`;

exports[`patches image fields > new > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "transparent",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "ef95d5daa4d",
        "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=2560&h=1705&fit=crop",
      },
    },
  ],
}
`;

exports[`patches image fields > new > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "f2c3f8bfc90",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "f2c3f8bfc90",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 1,
              },
              "id": "f2c3f8bfc90",
              "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > new > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 1,
            },
            "id": "45306297c5e",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "45306297c5e",
          "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > new > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 1,
    },
    "id": "c5c95f8d3ac",
    "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
  },
}
`;

exports[`patches image fields > otherRepository > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": "Odio ut enim blandit volutpat maecenas volutpat blandit",
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "#fdb338",
          "x": 349,
          "y": 115,
          "zoom": 1.5951464943576479,
        },
        "id": "4dcf07cfc26",
        "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": "Vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#61adcf",
              "x": -1586,
              "y": -2819,
              "zoom": 1.9393723758262054,
            },
            "id": "f5dbf0d9ed2",
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Ut consequat semper viverra nam libero justo laoreet",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#8efd5a",
            "x": 466,
            "y": -571,
            "zoom": 1.394663850868741,
          },
          "id": "f5dbf0d9ed2",
          "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e",
        },
        "group": [
          {
            "field": {
              "alt": "Porttitor massa id neque aliquam vestibulum morbi blandit",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#bc3178",
                "x": 1156,
                "y": -2223,
                "zoom": 1.602826201962965,
              },
              "id": "f5dbf0d9ed2",
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": "Vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#c361cc",
              "x": -751,
              "y": -404,
              "zoom": 1.6465649620272602,
            },
            "id": "4f4a69ff72d",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#55e3be",
            "x": -762,
            "y": 991,
            "zoom": 1.0207384987782544,
          },
          "id": "4f4a69ff72d",
          "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepository > static zone 1`] = `
{
  "field": {
    "alt": "Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed",
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "#97acc6",
      "x": 1922,
      "y": -967,
      "zoom": 1.9765406541937358,
    },
    "id": "9abffab1d17",
    "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f",
  },
}
`;

exports[`patches image fields > otherRepositoryEmpty > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": null,
        "id": null,
        "url": null,
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": null,
            "id": null,
            "url": null,
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": null,
          "id": null,
          "url": null,
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": null,
              "id": null,
              "url": null,
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": null,
            "id": null,
            "url": null,
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": null,
          "id": null,
          "url": null,
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": null,
    "id": null,
    "url": null,
  },
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": "Odio ut enim blandit volutpat maecenas volutpat blandit",
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "#fdb338",
          "x": 349,
          "y": 115,
          "zoom": 1.5951464943576479,
        },
        "id": "4dcf07cfc26",
        "square": {
          "alt": "Odio ut enim blandit volutpat maecenas volutpat blandit",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#fdb338",
            "x": 349,
            "y": 115,
            "zoom": 1.5951464943576479,
          },
          "id": "4dcf07cfc26",
          "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=other&query=params",
        },
        "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=query",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": "Vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#61adcf",
              "x": -1586,
              "y": -2819,
              "zoom": 1.9393723758262054,
            },
            "id": "f5dbf0d9ed2",
            "square": {
              "alt": "Vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#61adcf",
                "x": -1586,
                "y": -2819,
                "zoom": 1.9393723758262054,
              },
              "id": "f5dbf0d9ed2",
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Ut consequat semper viverra nam libero justo laoreet",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#8efd5a",
            "x": 466,
            "y": -571,
            "zoom": 1.394663850868741,
          },
          "id": "f5dbf0d9ed2",
          "square": {
            "alt": "Ut consequat semper viverra nam libero justo laoreet",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#8efd5a",
              "x": 466,
              "y": -571,
              "zoom": 1.394663850868741,
            },
            "id": "f5dbf0d9ed2",
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
        },
        "group": [
          {
            "field": {
              "alt": "Porttitor massa id neque aliquam vestibulum morbi blandit",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#bc3178",
                "x": 1156,
                "y": -2223,
                "zoom": 1.602826201962965,
              },
              "id": "f5dbf0d9ed2",
              "square": {
                "alt": "Porttitor massa id neque aliquam vestibulum morbi blandit",
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "#bc3178",
                  "x": 1156,
                  "y": -2223,
                  "zoom": 1.602826201962965,
                },
                "id": "f5dbf0d9ed2",
                "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
              },
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": "Vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#c361cc",
              "x": -751,
              "y": -404,
              "zoom": 1.6465649620272602,
            },
            "id": "4f4a69ff72d",
            "square": {
              "alt": "Vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#c361cc",
                "x": -751,
                "y": -404,
                "zoom": 1.6465649620272602,
              },
              "id": "4f4a69ff72d",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#55e3be",
            "x": -762,
            "y": 991,
            "zoom": 1.0207384987782544,
          },
          "id": "4f4a69ff72d",
          "square": {
            "alt": "Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#55e3be",
              "x": -762,
              "y": 991,
              "zoom": 1.0207384987782544,
            },
            "id": "4f4a69ff72d",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > static zone 1`] = `
{
  "field": {
    "alt": "Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed",
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "#97acc6",
      "x": 1922,
      "y": -967,
      "zoom": 1.9765406541937358,
    },
    "id": "9abffab1d17",
    "square": {
      "alt": "Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed",
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "#97acc6",
        "x": 1922,
        "y": -967,
        "zoom": 1.9765406541937358,
      },
      "id": "9abffab1d17",
      "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=other&query=params",
    },
    "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=query",
  },
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "#fdb338",
          "x": 349,
          "y": 115,
          "zoom": 1.5951464943576479,
        },
        "id": "4dcf07cfc26",
        "square": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#fdb338",
            "x": 349,
            "y": 115,
            "zoom": 1.5951464943576479,
          },
          "id": "4dcf07cfc26",
          "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=other&query=params",
        },
        "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=query",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#61adcf",
              "x": -1586,
              "y": -2819,
              "zoom": 1.9393723758262054,
            },
            "id": "f5dbf0d9ed2",
            "square": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#61adcf",
                "x": -1586,
                "y": -2819,
                "zoom": 1.9393723758262054,
              },
              "id": "f5dbf0d9ed2",
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#8efd5a",
            "x": 466,
            "y": -571,
            "zoom": 1.394663850868741,
          },
          "id": "f5dbf0d9ed2",
          "square": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#8efd5a",
              "x": 466,
              "y": -571,
              "zoom": 1.394663850868741,
            },
            "id": "f5dbf0d9ed2",
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#bc3178",
                "x": 1156,
                "y": -2223,
                "zoom": 1.602826201962965,
              },
              "id": "f5dbf0d9ed2",
              "square": {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "#bc3178",
                  "x": 1156,
                  "y": -2223,
                  "zoom": 1.602826201962965,
                },
                "id": "f5dbf0d9ed2",
                "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
              },
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#c361cc",
              "x": -751,
              "y": -404,
              "zoom": 1.6465649620272602,
            },
            "id": "4f4a69ff72d",
            "square": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#c361cc",
                "x": -751,
                "y": -404,
                "zoom": 1.6465649620272602,
              },
              "id": "4f4a69ff72d",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#55e3be",
            "x": -762,
            "y": 991,
            "zoom": 1.0207384987782544,
          },
          "id": "4f4a69ff72d",
          "square": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#55e3be",
              "x": -762,
              "y": 991,
              "zoom": 1.0207384987782544,
            },
            "id": "4f4a69ff72d",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "#97acc6",
      "x": 1922,
      "y": -967,
      "zoom": 1.9765406541937358,
    },
    "id": "9abffab1d17",
    "square": {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "#97acc6",
        "x": 1922,
        "y": -967,
        "zoom": 1.9765406541937358,
      },
      "id": "9abffab1d17",
      "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=other&query=params",
    },
    "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=query",
  },
}
`;

exports[`patches image fields > otherRepositoryWithTypeThumbnail > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": "Odio ut enim blandit volutpat maecenas volutpat blandit",
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "#fdb338",
          "x": 349,
          "y": 115,
          "zoom": 1.5951464943576479,
        },
        "id": "4dcf07cfc26",
        "type": {
          "alt": "Odio ut enim blandit volutpat maecenas volutpat blandit",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#fdb338",
            "x": 349,
            "y": 115,
            "zoom": 1.5951464943576479,
          },
          "id": "4dcf07cfc26",
          "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=other&query=params",
        },
        "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=query",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithTypeThumbnail > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": "Vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#61adcf",
              "x": -1586,
              "y": -2819,
              "zoom": 1.9393723758262054,
            },
            "id": "f5dbf0d9ed2",
            "type": {
              "alt": "Vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#61adcf",
                "x": -1586,
                "y": -2819,
                "zoom": 1.9393723758262054,
              },
              "id": "f5dbf0d9ed2",
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Ut consequat semper viverra nam libero justo laoreet",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#8efd5a",
            "x": 466,
            "y": -571,
            "zoom": 1.394663850868741,
          },
          "id": "f5dbf0d9ed2",
          "type": {
            "alt": "Ut consequat semper viverra nam libero justo laoreet",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#8efd5a",
              "x": 466,
              "y": -571,
              "zoom": 1.394663850868741,
            },
            "id": "f5dbf0d9ed2",
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
        },
        "group": [
          {
            "field": {
              "alt": "Porttitor massa id neque aliquam vestibulum morbi blandit",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#bc3178",
                "x": 1156,
                "y": -2223,
                "zoom": 1.602826201962965,
              },
              "id": "f5dbf0d9ed2",
              "type": {
                "alt": "Porttitor massa id neque aliquam vestibulum morbi blandit",
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "#bc3178",
                  "x": 1156,
                  "y": -2223,
                  "zoom": 1.602826201962965,
                },
                "id": "f5dbf0d9ed2",
                "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
              },
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithTypeThumbnail > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": "Vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#c361cc",
              "x": -751,
              "y": -404,
              "zoom": 1.6465649620272602,
            },
            "id": "4f4a69ff72d",
            "type": {
              "alt": "Vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis",
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "#c361cc",
                "x": -751,
                "y": -404,
                "zoom": 1.6465649620272602,
              },
              "id": "4f4a69ff72d",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit",
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "#55e3be",
            "x": -762,
            "y": 991,
            "zoom": 1.0207384987782544,
          },
          "id": "4f4a69ff72d",
          "type": {
            "alt": "Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit",
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "#55e3be",
              "x": -762,
              "y": 991,
              "zoom": 1.0207384987782544,
            },
            "id": "4f4a69ff72d",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithTypeThumbnail > static zone 1`] = `
{
  "field": {
    "alt": "Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed",
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "#97acc6",
      "x": 1922,
      "y": -967,
      "zoom": 1.9765406541937358,
    },
    "id": "9abffab1d17",
    "type": {
      "alt": "Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed",
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "#97acc6",
        "x": 1922,
        "y": -967,
        "zoom": 1.9765406541937358,
      },
      "id": "9abffab1d17",
      "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=other&query=params",
    },
    "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=query",
  },
}
`;
